# libpixelair

./: .coverage  .gitignore  pixelair.fbs  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: changelog.rst  conf.py  contributing.rst  control.rst  discovery.rst  index.rst  usage.rst
docs/api/: device.rst  discovery.rst  listener.rst  types.rst
examples/: basic_fluora_example.py  control_device.py  discover_devices.py  poll_device.py
libpixelair/: __init__.py  arp.py  device.py  discovery.py  packet_assembler.py  udp_listener.py
scripts/: __init__.py  docs.py
tests/: __init__.py  test_arp.py  test_types.py
