[tool.poetry]
name = "libpixelair"
version = "0.2.1"
description = ""
authors = ["Aiden Vigue <aiden.vigue@koiosdigital.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-osc = "^1.8.3"
flatbuffers = "^25.2.10"
netifaces = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
